--- a/app/src/main/res/layout/activity_create_fill_up.xml
+++ b/app/src/main/res/layout/activity_create_fill_up.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/etDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Válassz dátumot"
+                android:hint="@string/pick_date"
                 android:clickable="true"
                 android:focusable="false"/>
 
@@ -87,7 +87,10 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/buttons"
                 android:textColor="#fff"
-                android:text="Fénykép készítése a nyugtáról"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:layout_marginTop="20dp"
+                android:text="@string/receipt_upload"
                 android:id="@+id/btnAttach" />
 
         <ImageView
