--- a/app/src/main/res/layout/activity_loginregister.xml
+++ b/app/src/main/res/layout/activity_loginregister.xml
@@ -31,7 +31,7 @@
                     android:id="@+id/etEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Email"
+                    android:hint="@string/login_email"
                     android:inputType="textEmailAddress"
                     android:text="" />
 
@@ -48,7 +48,7 @@
                     android:id="@+id/etPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
+                    android:hint="@string/password"
                     android:inputType="textPassword"
                     android:text="" />
 
@@ -63,7 +63,7 @@
                 android:padding="12dp"
                 android:background="@drawable/buttons"
                 android:textColor="#fff"
-                android:text="Login" />
+                android:text="@string/login" />
 
         <Button
                 android:id="@+id/btnRegister"
@@ -72,7 +72,7 @@
                 android:background="@drawable/buttons"
                 android:textColor="#fff"
                 android:padding="12dp"
-                android:text="Register" />
+                android:text="@string/register" />
 
     </LinearLayout>
 
