--- a/app/src/main/res/layout/fuel_up_item.xml
+++ b/app/src/main/res/layout/fuel_up_item.xml
@@ -31,7 +31,7 @@
                 android:orientation="horizontal">
 
             <ImageButton
-                    android:id="@+id/remove_btn"
+                    android:id="@+id/btnRemove"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
